# bruteforce-luks

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
contrib/gentoo/app-crypt/bruteforce-luks/: bruteforce-luks-1.1.ebuild  bruteforce-luks-1.2.2.ebuild
doc/: bruteforce-luks.1
src/: bruteforce-luks.c  version.h
tests/: Makefile.am  crack-volume1.sh  crack-volume2.sh  crack-volume3.sh  dict.txt  volume1-header
